--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,18 +79,10 @@
         android:layout_marginTop="24dp" />
 
     <!-- ListView para mostrar clases -->
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listaclases"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/btnregistrar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/btnactualizar"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:divider="@android:color/darker_gray"
-        android:dividerHeight="1dp" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <!-- Botón actualizar -->
     <Button
